dashboard front end sketched

--- a/construction-SPA/src/app/dashboard/dashboard.component.html
+++ b/construction-SPA/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,15 @@
-<p>dashboard works!</p>
+<div class="container-fluid"> 
+    <div class="row px-lg-5">
+        <app-searchbar-nav></app-searchbar-nav>
+    </div>  
+    <div class="row">
+    <div class="col-md-2 mr-auto"><app-side-nav></app-side-nav></div>
+    <div class="col-md-10">
+        <app-small-cards></app-small-cards>
+        <app-cards></app-cards></div>
+   </div></div>
+   
+
+
+
+ 
