--- a/construction-SPA/src/app/nav/nav.component.html
+++ b/construction-SPA/src/app/nav/nav.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-  <button *ngIf="!loggedIn()" class="btn btn-secondary mr-4" [routerLink]="['/register']" (click)="registerToggle()">
+  <button *ngIf="!loggedIn()" class="btn btn-warning mr-4" [routerLink]="['/register']" (click)="registerToggle()">
     Register</button>
 </nav>
 
